feat: Bulk get schema + Altimate Scan (#674)
* sample displaying in problems panel (+13 squashed commits)
Squashed commits:
[ede4375] WIP: do a basic check for now.. have to add more complex cases.
[67de892] getting schemas for all projects that are active.
[c4aa598] WIP: hacking it into sqltoref
[76d0fff] move to end of nav icons
[d6a8880] change verbiage
[24960db] add telemetry
[deaabad] fix err message
[e1ce84a] add errors to surface to users.
[a4642ad] conditionally show the new option if config is set right.
[bfd3e04] add source name as well since that is what appears in the reference
[163b430] add db/schema info when parsing sourcemetadata. also send sources to sqltomodel endpoint
[daaf642] change icon to avoid confusion
[393850c] revert changes to doc panel (+3 squashed commits)
Squashed commits:
[b5dcdfd] limit to current project, use compiled sql to allow partially migrated sqls
[392d7fb] add a new provider to associate models.
[0079a10] WIP: hacking doc panel for now

* WIP: migrated checks to another file.. need to improve traversal.

* better traversal method

* add test for missing materialization
fix test for stale doc

* rename functionality as Altimate Scan

* add progress bar

* clear the errors list from before.

* add scan context, add project actions in side panel, add command to clear problems. (+2 squashed commits)
Squashed commits:
[deabe20] WIP: refactored into a set of tests.
[36fc5fc] WIP: partial refactor

* Customize icons, add feedback icon

* add fb links

* skip seeds and ephemeral models when testing

* escapes for a bunch of materialization types. also add col highlights

* overload runstep to simplify calling agent from tests.

* forgot the base agent

* clean up logs, update error messages.

* fix schema path. ignore comment lines

* vastly improved matching. adding name: xxx before match to reduce description matches.

* add altimate scan to readme.

* not sure if people do

--- a/package.json
+++ b/package.json
@@ -226,6 +226,10 @@
         {
           "id": "documentation_treeview",
           "name": "Documentation"
+        },
+        {
+          "id": "icon_actions_treeview",
+          "name": "Project Actions ✨"
         }
       ],
       "dbt_preview_results": [
@@ -263,6 +267,15 @@
         "command": "dbtPowerUser.sqlToModel",
         "title": "Convert to dbt Model",
         "icon": "$(circuit-board)"
+      },
+      {
+        "command": "dbtPowerUser.altimateScan",
+        "title": "Altimate Scan",
+        "icon": "$(circuit-board)"
+      },
+      {
+        "command": "dbtPowerUser.clearAltimateScanResults",
+        "title": "Clear Altimate Scan Results"
       },
       {
         "command": "dbtPowerUser.compileCurrentModel",
