add tutorial walkthrough

--- a/package.json
+++ b/package.json
@@ -606,6 +606,77 @@
             ]
           }
         ]
+      },
+      {
+        "id": "tutorials",
+        "title": "%walkthrough.tutorials.title%",
+        "description": "%walkthrough.tutorials.description%",
+        "steps": [
+          {
+            "id": "autocompletion",
+            "title": "%walkthrough.tutorials.steps.autocompletion.title%",
+            "description": "%walkthrough.tutorials.steps.autocompletion.description%",
+            "media": {
+              "markdown": "media/autocompletion.md"
+            }
+          },
+          {
+            "id": "previews",
+            "title": "%walkthrough.tutorials.steps.previews.title%",
+            "description": "%walkthrough.tutorials.steps.previews.description%",
+            "media": {
+              "markdown": "media/previews.md"
+            }
+          },
+          {
+            "id": "documentation",
+            "title": "%walkthrough.tutorials.steps.documentation.title%",
+            "description": "%walkthrough.tutorials.steps.documentation.description%",
+            "media": {
+              "markdown": "media/documentation.md"
+            }
+          },
+          {
+            "id": "lineage",
+            "title": "%walkthrough.tutorials.steps.lineage.title%",
+            "description": "%walkthrough.tutorials.steps.lineage.description%",
+            "media": {
+              "markdown": "media/lineage.md"
+            }
+          },
+          {
+            "id": "dependants",
+            "title": "%walkthrough.tutorials.steps.dependants.title%",
+            "description": "%walkthrough.tutorials.steps.dependants.description%",
+            "media": {
+              "markdown": "media/dependants.md"
+            }
+          },
+          {
+            "id": "generate_models",
+            "title": "%walkthrough.tutorials.steps.generate_models.title%",
+            "description": "%walkthrough.tutorials.steps.generate_models.description%",
+            "media": {
+              "markdown": "media/generate_models.md"
+            }
+          },
+          {
+            "id": "healthcheck",
+            "title": "%walkthrough.tutorials.steps.healthcheck.title%",
+            "description": "%walkthrough.tutorials.steps.healthcheck.description%",
+            "media": {
+              "markdown": "media/healthcheck.md"
+            }
+          },
+          {
+            "id": "qsummary",
+            "title": "%walkthrough.tutorials.steps.qsummary.title%",
+            "description": "%walkthrough.tutorials.steps.qsummary.description%",
+            "media": {
+              "markdown": "media/qsummary.md"
+            }
+          }
+        ]
       }
     ]
   },
