only show the file associations step if there are any missing associations.

--- a/package.json
+++ b/package.json
@@ -548,6 +548,7 @@
             "id": "associateFileExts",
             "title": "%walkthrough.initialSetup.steps.associateFileExts.title%",
             "description": "%walkthrough.initialSetup.steps.associateFileExts.description%",
+            "when": "dbtPowerUser.showFileAssociationStep",
             "media": {
               "markdown": "media/associateFileExts.md"
             },
