added informational block for chat and modifed the end message to include 1x1 meeting link

--- a/package.json
+++ b/package.json
@@ -522,6 +522,14 @@
             }
           },
           {
+            "id": "initialSupport",
+            "title": "%walkthrough.initialSetup.steps.support.title%",
+            "description": "%walkthrough.initialSetup.steps.support.description%",
+            "media": {
+              "markdown": "Welcome! We're here to ensure a smooth setup process. If you need help or run into any questions, our support team is just a click away. [Chat with us](https://app.myaltimate.com/contactus) for support."
+            }
+          },
+          {
             "id": "updateExtension",
             "title": "%walkthrough.initialSetup.steps.updateExtension.title%",
             "description": "%walkthrough.initialSetup.steps.updateExtension.description%",
