--- a/package.json
+++ b/package.json
@@ -526,7 +526,7 @@
             "title": "%walkthrough.initialSetup.steps.support.title%",
             "description": "%walkthrough.initialSetup.steps.support.description%",
             "media": {
-              "markdown": "Welcome! We're here to ensure a smooth setup process. If you need help or run into any questions, our support team is just a click away. [Chat with us](https://app.myaltimate.com/contactus) for support."
+              "markdown": "media/initialSetup.md"
             }
           },
           {
