query explanation improvements

--- a/package.json
+++ b/package.json
@@ -452,8 +452,8 @@
         },
         {
           "command": "dbtPowerUser.summarizeQuery",
-          "when": "resourceLangId =~ /^sql$|^jinja-sql$/ && config.dbt.altimateInstanceName && config.dbt.altimateAiKey",
-          "group": "navigation@1"
+          "group": "dbt@3",
+          "when": "resourceLangId =~ /^sql$|^jinja-sql$/ && config.dbt.altimateInstanceName && config.dbt.altimateAiKey"
         },
         {
           "command": "dbtPowerUser.sqlToModel",
