--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,11 @@ jobs:
     - run: npm install
     - run: npm install
       working-directory: ./new_lineage_panel
+    - name: Debugging info 
+      run: |
+        echo "Ref: ${{ github.ref }}"
+        echo "Matrix OS: ${{ matrix.os }}"
+        echo "Success: ${{ success() }}"
     - name: Publish Visual Studio Marketplace
       if: success() && startsWith( github.ref, 'refs/tags/') && matrix.os == 'ubuntu-latest'
       run: npm run deploy-vscode
