feat: adding consent

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -99,3 +99,17 @@ nav:
       - Architecture: arch/architecture.md
       - Security FAQ: arch/faq.md
       - Pricing FAQ: arch/pricingfaq.md
+extra:
+  consent:
+    title: Cookie consent
+    description: >-
+      We use cookies to recognize your repeated visits and preferences, as well
+      as to measure the effectiveness of our documentation and whether users
+      find what they're searching for. With your consent, you're helping us to
+      make our documentation better.
+    actions:
+      - accept
+      - reject
+copyright: >
+  Copyright &copy; 2022 - 2023 Altimate Inc –
+  <a href="#__consent">Change cookie settings</a>
