--- a/package.json
+++ b/package.json
@@ -245,6 +245,11 @@
         "title": "dbt Power User Quick Pick"
       },
       {
+        "command": "dbtPowerUser.sqlQuickPick",
+        "title": "SQL Actions",
+        "icon": "$(lightbulb-autofix)"
+      },
+      {
         "command": "dbtPowerUser.runCurrentModel",
         "title": "Run dbt Model",
         "icon": {
@@ -424,6 +429,11 @@
         },
         {
           "command": "dbtPowerUser.summarizeQuery",
+          "when": "resourceLangId =~ /^sql$|^jinja-sql$/ && config.dbt.altimateInstanceName && config.dbt.altimateAiKey",
+          "group": "navigation@1"
+        },
+        {
+          "command": "dbtPowerUser.sqlQuickPick",
           "when": "resourceLangId =~ /^sql$|^jinja-sql$/ && config.dbt.altimateInstanceName && config.dbt.altimateAiKey",
           "group": "navigation@1"
         },
