--- a/new_lineage_panel/tsconfig.json
+++ b/new_lineage_panel/tsconfig.json
@@ -18,7 +18,11 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    // This tsconfig should be governed by root tsconfig
+    "paths": {
+      "@types": ["../types/index.ts"]
+    }
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
